# cpp-experiments

./: .gitignore  README.md
game-of-life/: CMakeLists.txt
game-of-life/src/: board.cpp  board.hpp  cmake_options.hpp.in  graphics.cpp  graphics.hpp  main.cpp
sfml-hi-world/: CMakeLists.txt
sfml-hi-world/src/: main.cpp
